--- a/scss/pages/_gallery.scss
+++ b/scss/pages/_gallery.scss
@@ -13,6 +13,7 @@
       gap: 10px;
       display: flex;
       flex-wrap: wrap;
+      padding-bottom: 24px;
     }
 
     &-button {
